--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Paint Your Own Picture</h1>
+
+    <canvas id="canvas1"></canvas>
+
     <script src="script.js"></script>
 </body>
 </html>
