--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Paint Your Own Picture</h1>
 
+    <p>Set width <input type="text" onchange="setWidth(this.value)"/> </p>
     <canvas id="canvas1"></canvas>
 
     <script src="script.js"></script>
