--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Paint Your Own Picture</h1>
 
     <p>Set width <input type="text" onchange="setWidth(this.value)"/> </p>
+    <p>Set height <input type="text" onchange="setHeight(this.value)"/> </p>
     <canvas id="canvas1"></canvas>
 
     <script src="script.js"></script>
