--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <p>Set width <input type="text" onchange="setWidth(this.value)"/> </p>
     <p>Set height <input type="text" onchange="setHeight(this.value)"/> </p>
-    <canvas id="canvas1"></canvas>
+    <canvas id="canvas1" onmousedown="startPaint()" onmousemove="doPaint(event.offsetX, event.offsetY)" onmouseup="endPaint()"></canvas>
 
     <script src="script.js"></script>
 </body>
