--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
     <p>Set width <input type="text" onchange="setWidth(this.value)"/> </p>
     <p>Set height <input type="text" onchange="setHeight(this.value)"/> </p>
+
     <canvas id="canvas1" onmousedown="startPaint()" onmousemove="doPaint(event.offsetX, event.offsetY)" onmouseup="endPaint()"></canvas>
+
+    <p>Brush color <input type="color" value="#000" onchange="changeColor(this.value)"/> 
+    Brush size: <input type="range" id="sizeInput" min="1" max="50" value="50" oninput="resizeBrush(this.value)"/>
+    <output id="sizeOutput">50</output></p>
 
     <script src="script.js"></script>
 </body>
