--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     Brush size: <input type="range" id="sizeInput" min="1" max="50" value="50" oninput="resizeBrush(this.value)"/>
     <output id="sizeOutput">50</output></p>
 
+    <p> <input type="button" id="clear" value="Clear Canvas" onclick="clearCanvas()"> </p>
+
     <script src="script.js"></script>
 </body>
 </html>
